# 3DGameOfLife-Vulkan-Edition

./: .clang-format  .clang-tidy  .docker-backup-summary.txt  .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENT_ASSIGNMENTS.md  AGENT_ORCHESTRATOR_SYSTEM.md  ARCHITECTURE_CHANGES.md  BUILD.md  CHANGELOG.md  CLEANUP_STATUS.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_minimal_optimizer.txt  CMakeLists_modular.txt  CMakeLists_optimization.txt  COMPREHENSIVE_REFINEMENT_PLAN.md  CONTRIBUTING.md  Dockerfile  Doxyfile  IOlog.txt  LICENSE  Makefile  OPTIMIZATION_STATUS_REPORT.md  PROJECT_TRANSFORMATION_SUMMARY.md  README.md  ROADMAP.md  RULES.md  TASK_BOARD.json  VMA_IMPROVEMENTS_CATALOG.md  agent_4_directives_catalogue.md  agent_assignments.txt  agent_swap.json  bootstrap_vcpkg.bat  bootstrap_vcpkg.ps1  build.bat  build_and_run_overnight.ps1  (+25 more)
.cmake/: StaticAnalysis.cmake  Testing.cmake  iwyu.imp
.cursor/: .rules  environment.json
build_minimal/: 3DGameOfLife-Vulkan-Edition.sln  3DGameOfLife-Vulkan-Edition.vcxproj  3DGameOfLife-Vulkan-Edition.vcxproj.filters  3DGameOfLife-Vulkan-Edition_lib.vcxproj  3DGameOfLife-Vulkan-Edition_lib.vcxproj.filters  3DGameOfLife-Vulkan-Edition_minimal.vcxproj  3DGameOfLife-Vulkan-Edition_minimal.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark_tests.vcxproj  benchmark_tests.vcxproj.filters  camera.vcxproj  camera.vcxproj.filters  clean_shaders.vcxproj  clean_shaders.vcxproj.filters  compile_shaders.vcxproj  compile_shaders.vcxproj.filters  copy_shaders.vcxproj  copy_shaders.vcxproj.filters  core_engine.vcxproj  core_engine.vcxproj.filters  dev_build.vcxproj  dev_build.vcxproj.filters  distclean.vcxproj  distclean.vcxproj.filters  game_logic.vcxproj  game_logic.vcxproj.filters  (+51 more)
build_test/: ALL_BUILD.vcxproj  INSTALL.vcxproj  UXMirrorMinimalOptimizer.sln  UXMirrorPrototype.sln  UXMirrorPrototype.vcxproj  UXMirrorPrototype_lib.vcxproj  UXMirrorPrototype_minimal.vcxproj  ZERO_CHECK.vcxproj  camera.vcxproj  core_engine.vcxproj  game_logic.vcxproj  memory_management.vcxproj  minimal_overnight_optimizer.vcxproj  rendering.vcxproj  run_minimal_overnight.vcxproj  run_prototype.vcxproj  ui.vcxproj  utilities.vcxproj  ux_mirror_prototype.vcxproj  vulkan_compute.vcxproj  vulkan_image.vcxproj  vulkan_rendering.vcxproj  vulkan_resources.vcxproj  vulkan_ui.vcxproj
config/: app_config.json  vulkan_config.json
docs/: CODE_QUALITY_SUMMARY.md  PRE_COMMIT_SETUP.md  TROUBLESHOOTING.md  VISUAL_FEEDBACK_TRAINING.md  VMA_INTEGRATION.md  VMA_MODERNIZATION.md  VMA_USAGE_GUIDE.md  build_system_migration_guide.md  build_system_repair_report_20250127.md  code_quality_analysis_agent5.md  code_quality_improvement_plan.md  code_quality_report_20250127.md  development_setup.md  quality_report_20240530.md  shader_debugging_guide.md  shader_quality_report.md  static_analysis.md  technical_debt_inventory.md  technical_debt_update_20250127.md  todo_resolution_progress_20250127.md  vulkan_resource_leak_analysis.md
include/: AgentCommunication.hpp  AppState.h  CPUCellularAutomata.hpp  Camera.h  Engine.h  GameRules.h  Grid3D.h  HIPCellularAutomata.hpp  Logger.h  MetricsPipeline.hpp  OptimizationLoop.hpp  PatternManager.h  PatternMetadata.h  RayCaster.h  RuleAnalyzer.h  SaveManager.h  SharedMemoryInterface.hpp  SparseGrid3D.h  UI.h  Vertex.h  VisualFeedbackTrainingLoop.h  VoxelData.h  VulkanContext.h  VulkanEngine.h  VulkanError.h  VulkanMemoryManager.h  WindowManager.h  imgui_impl_glfw.h  imgui_impl_vulkan.h
scripts/: README.md  build-msvc.ps1  build-simple.ps1  build-with-msvc.ps1  build.ps1  build.sh  build_sequential.ps1  build_timeout.bat  build_timeout.ps1  build_windows.bat  clean.sh  clean_windows.bat  copy_build_windows.bat  copy_to_windows.bat  diagnose-build.ps1  diagnose.ps1  fix_environment.bat  fix_path.bat  fix_path.ps1  fix_powershell.ps1  generate_test_report.py  install-compiler-simple.ps1  install-msvc-compiler.ps1  main.ps1  migrate_build_system.ps1  migrate_build_system.sh  package.sh  run-tests.ps1  run_fix_powershell.bat  run_performance_regression.py  setup-hooks.ps1  setup-hooks.sh  setup_hooks.sh  setup_windows.bat  shader_compile.sh  update_vma.bat  update_vma.sh  verify_fixes.ps1
shaders/: basic.frag  basic.vert  game_of_life_3d.comp  minimal.frag  minimal.vert  population_reduction.comp  preview.frag  preview.vert  voxel.frag  voxel.vert
src/: AgentCommunication_stub.cpp  AppState.h  Camera.cpp  Camera.h  (+52 more)
src/ml/: CMakeLists.txt
tests/: CMakeLists.txt  CameraTest.cpp  LoggerTest.cpp  MemoryLeakTest.cpp  MemoryTest.cpp  PipelineTest.cpp  QueueFamilyTest.cpp  RayCasterTest.cpp  SaveManagerTest.cpp  SwapchainTest.cpp  UtilityTest.cpp  VulkanContextTest.cpp  VulkanEngineBenchmark.cpp  VulkanEngineTest.cpp  VulkanMemoryManagerTest.cpp  WindowManagerTest.cpp  test_memory_pool.cpp  test_vulkan_integration.cpp
tests/benchmarks/: CMakeLists.txt  CameraBenchmark.cpp  ComputeShaderBenchmark.cpp  MemoryManagerBenchmark.cpp  RayCasterBenchmark.cpp  SaveManagerBenchmark.cpp  VulkanContextBenchmark.cpp  VulkanEngineBenchmark.cpp  VulkanMemoryManagerBenchmark.cpp  WindowManagerBenchmark.cpp  main.cpp
tests/integration/: CMakeLists.txt
tests/mocks/: VulkanMock.hpp
tests/performance/: CMakeLists.txt  GameOfLifePerformanceTest.cpp  StressTest.cpp
tests/unit/: CMakeLists.txt  MemoryLeakTest.cpp  VulkanContextTest.cpp  VulkanEngineTest.cpp  VulkanValidationTest.cpp  WindowManagerTest.cpp
tests/vulkan_performance/: BenchmarkVisualizer.hpp  CMakeLists.txt  CommandBufferPerformanceTest.cpp  GPUMemoryTest.cpp  MemoryPerformanceTest.cpp  PipelinePerformanceTest.cpp  ShaderCompilationTest.cpp  ShaderPerformanceTest.cpp  VulkanPerformanceTestBase.hpp  run_performance_tests.py
(+142 files in other folders)
